--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -5,7 +5,7 @@ a {
  .workout-list {
    border: 1px solid black;
    margin: 5px;
-   padding-left: 5px;
+   padding: 5px;
  }
 
  .workout-form {
@@ -13,3 +13,10 @@ a {
   margin: 5px;
   padding: 5px;
  }
+
+ .comment-window {
+
+border: 1px solid red;
+margin: 5px;
+padding: 5px;
+}
