--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -1,4 +1,4 @@
-<div class="activity-list" ng-repeat="activity in vm.activities | orderBy: '-fav_counter' ">
+<div class="workout-list" ng-repeat="workout in vm.workouts | orderBy: '-fav_counter' ">
          <h4>{{workout.title}} </h4>
          <span ng-click="vm.addFavCount(favorite)">
             <i ng-class="{'glyphicon glyphicon-heart': liked, 'glyphicon glyphicon-heart-empty': !liked}" ng-click="liked=!liked"></i>
