--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -1,6 +1,6 @@
-<div class="workout-list" ng-repeat="workout in vm.workouts | orderBy: '-fav_counter' ">
+<div class="workout-list" ng-repeat="workout in vm.workouts | orderBy: '-fav_counter' | filter:{medium_weights:filter.medium_weights, heavy_weights:filter.heavy_weights, jumprope:filter.jumprope, resistance_bands:filter.resistance_bands, kettle_ball:filter.kettle_ball, slam_ball:filter.slam_ball, ab_mat:filter.ab_mat}">
          <h4>{{workout.title}} </h4>
-         <span ng-click="vm.addFavCount(favorite)">
+         <span ng-click="vm.addFavCount(workout)">
             <i ng-class="{'glyphicon glyphicon-heart': liked, 'glyphicon glyphicon-heart-empty': !liked}" ng-click="liked=!liked"></i>
         </span>
          <p> Favorite: {{workout.favorite}} </p>
@@ -12,6 +12,15 @@
          | <span ng-show="workout.kettle_ball"> Kettle Ball</span> <span ng-hide="workout.slam_ball"> Slam Ball</span>
          </p>
          <p> {{workout.summary}} </p>
+   </div>
+
+   <div class="filter-form">
+     <p> <input type="radio" ng-model="filter.medium_weights" value="true"> Medium Weights
+         <input type="radio" ng-model="filter.medium_weights" value="false"> Heavy Weights</p>
+     <p> <input type="radio" ng-model="filter.jump_rope" value="true"> Jumprope
+         <input type="radio" ng-model="filter.jump_rope" value="false"> Resistance Bands</p>
+     <p> <input type="radio" ng-model="filter.kettle_ball" value="true"> Kettle Ball
+         <input type="radio" ng-model="filter.kettle_ball" value="false"> Slam Ball</p>
    </div>
 
 <form class="workout-form" ng-submit="vm.addWorkout()">
