--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -20,3 +20,17 @@ border: 1px solid red;
 margin: 5px;
 padding: 5px;
 }
+
+.filter-form {
+  text-align: center;
+  border: 1px solid black;
+  margin: 5px;
+  padding: 5px;
+  width: 30em;
+}
+
+#radio-table, table, td {
+  text-align: left;
+  margin: auto;
+  padding: 5px;
+}
