--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -9,16 +9,30 @@ a {
  }
 
  .workout-form {
+  text-align: center;
   border: 1px dashed blue;
   margin: 5px;
   padding: 5px;
+  width: 30em;
  }
 
- .comment-window {
+ .summary-field {
+  width: 25em;
+  height: 10em;
+  }
 
-border: 1px solid red;
-margin: 5px;
-padding: 5px;
+ .comment-window {
+  border: 1px solid red;
+  margin-bottom: 5px;
+  padding: 5px;
+  min-height: 100px;
+  max-height: 150px;
+  overflow: auto;
+}
+
+.comment-container{
+  margin: 5px;
+  padding: 5px;
 }
 
 .filter-form {
