--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -1,4 +1,4 @@
-<div class="workout-list" ng-repeat="workout in vm.workouts | orderBy: '-fav_counter' | filter:{medium_weights:filter.medium_weights, heavy_weights:filter.heavy_weights, jumprope:filter.jumprope, resistance_bands:filter.resistance_bands, kettle_ball:filter.kettle_ball, slam_ball:filter.slam_ball, ab_mat:filter.ab_mat}">
+<!-- <div class="workout-list" ng-repeat="workout in vm.workouts | orderBy: '-fav_counter' | filter:{medium_weights:filter.medium_weights, heavy_weights:filter.heavy_weights, jumprope:filter.jumprope, resistance_bands:filter.resistance_bands, kettle_ball:filter.kettle_ball, slam_ball:filter.slam_ball, ab_mat:filter.ab_mat}">
          <h4>{{workout.title}} </h4>
          <span ng-click="vm.addFavCount(workout)">
             <i ng-class="{'glyphicon glyphicon-heart': liked, 'glyphicon glyphicon-heart-empty': !liked}" ng-click="liked=!liked"></i>
@@ -46,3 +46,5 @@
      <p> Summary: <input type="text" ng-model="vm.workoutData.summary"> </p>
    <button ng-click="submit">Submit</button>
 </form>
+
+-->
