--- a/public/templates/workouts.html
+++ b/public/templates/workouts.html
@@ -1,41 +1,84 @@
 <!-- Workouts List -->
-
-<div class="workout-list" ng-repeat="workout in vm.workouts | orderBy: '-fav_counter' ">
-   <h4>{{workout.title}} </h4>
-   <span ng-click="vm.addFavCount(favorite)">
-      <i ng-class="{'glyphicon glyphicon-heart': liked, 'glyphicon glyphicon-heart-empty': !liked}" ng-click="liked=!liked"></i>
-  </span>
-   <p> Favorite: {{workout.favorite}} </p>
-   <p> Fav'd: {{workout.fav_counter}} </p>
-   <p> {{workout.workout_date | date:"MM/dd/yyyy"}} </p>
-   <p>
-   <span ng-show="workout.medium_weights">Medium Weights </span> <span ng-hide="workout.heavy_weights">Heavy Weights</span>
-   | <span ng-show="workout.jumprope">Jumprope</span> <span ng-hide="workout.resistance_bands">Resistance Bands</span>
-   | <span ng-show="workout.kettle_ball"> Kettle Ball</span> <span ng-hide="workout.slam_ball"> Slam Ball</span>
-   </p>
-   <p> Summary: {{workout.summary}} </p>
-
+<div class="container-fluid">
+   <div class="row">
+   <div class="workout-list col-sm-8" ng-repeat="workout in vm.workouts | orderBy: '-fav_counter'| filter:{medium_weights:filter.medium_weights, heavy_weights:filter.heavy_weights, jumprope:filter.jumprope, resistance_bands:filter.resistance_bands, kettle_ball:filter.kettle_ball, slam_ball:filter.slam_ball, ab_mat:filter.ab_mat}">
+     <h4> <a ng-model="workout._id" value="{{workout._id}}">  {{workout.title}} </a> </h4>
+     <span ng-click="vm.addFavCount(workout)">
+       <i ng-class="{'glyphicon glyphicon-heart': liked, 'glyphicon glyphicon-heart-empty': !liked}" ng-click="liked=!liked"></i>
+     <!-- <p> Favorite: {{activity.favorite}} </p> -->
+      {{workout.fav_counter}}
+     </span>
+     <p> Date Posted: {{workout.workout_date | date:"MM/dd/yyyy"}} </p>
+     <p>
+     <span ng-show="workout.medium_weights">Medium Weights </span> <span ng-hide="workout.heavy_weights">Heavy Weights</span>
+     | <span ng-show="workout.jumprope">Jumprope</span> <span ng-hide="workout.resistance_bands">Resistance Bands</span>
+     | <span ng-show="workout.kettle_ball"> Kettle Ball</span> <span ng-hide="workout.slam_ball"> Slam Ball</span>
+     </p>
+     <p> Summary: {{workout.summary}} </p>
+     <hr>
+     <div class="comment-container">
+      <p>Comments:</p>
        <div class="comment-window">
          <p>Comments-</p>
          <div ng-repeat="comment in workout.comments">
            <p>  {{comment.author.name}} <small>({{comment.author.email}})</small>: : {{comment.body}} </p>
-         </div>
-            <h5>Add Comment</h5>
-            <input type="text" ng-model="comment.body" placeholder="Comment here...">
-            <button ng-click="vm.addComment(workout, comment)">Post</button>
+           <hr>
+           </div>
        </div>
-     </div>
-    <!-- Angular Filter Forms -->
+       <span>
+         <input type="text" ng-model="comment.body" placeholder="Add comment here...">
+         <button ng-click="vm.addComment(workout, comment)">Post</button>
+       </span>
+       </div>
+       </div>
+
+  <!-- Angular Filter Forms -->
+    <div class="col-sm-4">
+      <div class="filter-form">
+        <h4>Filter Workouts</h4>
+      <p> Select one option from each line to filter your choices </p>
+      <table id="radio-table">
+          <tr>
+             <td><input type="radio" ng-model="filter.medium_weights" value="true"> Medium Weights </td>
+             <td><input type="radio" ng-model="filter.medium_weights" value="false"> Heavy Weights</td>
+           </tr>
+           <tr>
+             <td><input type="radio" ng-model="filter.jump_rope" value="true"> Jumprope </td>
+             <td><input type="radio" ng-model="filter.jump_rope" value="false"> Resistance Bands</td>
+           </tr>
+           <tr>
+             <td> <input type="radio" ng-model="filter.kettle_ball" value="true"> Kettle Ball</td>
+             <td><input type="radio" ng-model="filter.kettle_ball" value="false"> Slam Ball</td>
+           </tr>
+       </table>
+   </div>
+
+   <!-- Create Activity Form -->
     <form class="workout-form" ng-submit="vm.createWorkout()">
        <h4>Add a Workout</h4>
-         <p> Title: <input type="text" ng-model="vm.workoutData.title"> </p>
+         <div> Title: <input type="text" ng-model="vm.workoutData.title"> </div>
          <p> Warm-up: <input type="text" ng-model="vm.workoutData.warm_up"> </p>
          <p> Rounds: <input type="text" ng-model="vm.workoutData.rounds"> </p>
          <p> Set Length: <input type="text" ng-model="vm.workoutData.set_length"> </p>
-         <p> <input type="radio" ng-model="vm.workoutData.medium_weights" ng-value="true"> Medium Weights <input type="radio" ng-model="vm.workoutData.heavy_weights" ng-value="false"> Heavy Weights </p>
-         <p> <input type="radio" ng-model="vm.workoutData.jumprope" ng-value="true"> Jumprope <input type="radio" ng-model="vm.workoutData.resistance_bands" ng-value="false"> Resistance Bands</p>
-         <p> <input type="radio" ng-model="vm.workoutData.kettle_ball" ng-value="true"> Kettle Bell <input type="radio" ng-model="vm.workoutData.slam_ball" ng-value="false"> Slam Ball</p>
-         <p><input type="radio" ng-model="vm.workoutData.ab_mat" ng-value="false"> Ab Mat</p>
-         <p> Summary: <input type="text" ng-model="vm.workoutData.summary"> </p>
+         <table id="radio-table">
+          <tr>
+            <td><input type="radio" ng-model="vm.workoutData.medium_weights" ng-value="true">Medium Weights</td>
+            <td><input type="radio" ng-model="vm.workoutData.heavy_weights" ng-value="false"> Heavy Weights </td>
+          </tr>
+          <tr>
+            <td><input type="radio" ng-model="vm.workoutData.jumprope" ng-value="true"> Jumprope</td>
+            <td><input type="radio" ng-model="vm.workoutData.resistance_bands" ng-value="false"> Resistance Bands</td>
+          </tr>
+          <tr>
+            <td><input type="radio" ng-model="vm.workoutData.kettle_ball" ng-value="true"> Kettle Bell</td>
+            <td><input type="radio" ng-model="vm.workoutData.slam_ball" ng-value="false"> Slam Ball</td>
+          </tr>
+          </table>
+          <div> Summary:
+            <input class="summary-field" type="text" ng-model="vm.workoutData.summary">
+            </div>
        <button ng-click="submit">Submit</button>
-    </form>
+        </form>
+      </div>
+    </div>
+    </div>
