--- a/public/templates/about.html
+++ b/public/templates/about.html
@@ -1,2 +1,11 @@
-<h1>About</h1>
-<p>An app for people to quickly find a workout to do at home!</p>
+<div class="about-container box-shadow--4dp">
+  <h3>About Workout of Day</h3>
+  <hr>
+  <p>
+  Workout of the Day is an app for anyone wanting to quickly find a workout to spice up your gym routine.
+  Find fun workouts based on the equipment you want to use by using the filter.
+  If you have any great workouts to share with others feel free to sign-up and add it to the list.
+  You can also leave comments on other workouts on this site.
+  We hope we can help you pick the right workouts to make you break a sweat!
+  </p>
+</div>
