--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,7 +1,15 @@
+html{
+  height: 100%;
+}
+
 body {
   padding: 20px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  }
+  background: linear-gradient(#efdaba, #97b34b) no-repeat center center fixed;
+  background-size: cover;
+  min-height: 100%;
+}
+
 
 a {
     color: #00B7FF;
@@ -15,7 +23,7 @@ a {
  }
 
  #container{
-  width: 1000px;
+  width: 800px;
   margin: 0 auto;
  }
 
@@ -27,16 +35,28 @@ a {
 .workouts-container{
   margin: auto;
   padding: 5px;
-  width: 800px;
+  width: 600px;
   align-items: center;
+  border-radius: 0 0 0.5em 0.5em;
+  background-color: white;
 }
 
 .workout-list{
-  border: 1px solid black;
-  margin: 10px auto;
+  margin-top: 20px;
+  margin-bottom: 0px;
+  border: 0;
+  border-top: 1px solid #eee;
+}
+
+.activity-info{
+  text-align: center;
+}
+
+.activity-summary {
+  border: 1px solid grey;
+  width: 500px;
+  margin: auto;
   padding: 5px;
-  max-width: 600px;
-  align-items: center;
 }
 
 /*Comment Form*/
@@ -48,6 +68,8 @@ a {
   min-height: 100px;
   max-height: 150px;
   overflow: auto;
+  border-radius: 0 0 0.5em 0.5em;
+  font-size: 12px;
 }
 
 .comment-container{
@@ -56,13 +78,13 @@ a {
 }
 
 .comment-container hr {
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 0px;
+  margin-bottom: 0px;
   border: 0;
   border-top: 1px solid #eee;
  }
 .comment-input {
-  width: 20em;
+  width: 375px;
 }
 
 /*Add Activity Form*/
@@ -76,18 +98,27 @@ a {
   align-items: center;
   display: flex;
   justify-content: center;
+  background-color: white;
+  border-radius: 0 0 0.5em 0.5em;
 }
 
 .workout-form .title-field {
   width: 20em;
 }
 
+.workout-form textarea {
+ +  margin: 7px;
+ +}
+
 .summary-field {
   max-width: 25em;
   max-height: 10em;
   min-width: 25em;
   min-height: 10em;
-  text-align: top;
+}
+
+.activity-form button {
+  margin-bottom: 5px;
 }
 
 
@@ -106,7 +137,10 @@ a {
   margin: 5px auto;
   padding: 5px;
   width: 400px;
+  background-color: white;
+  border-radius: 0 0 0.5em 0.5em;
 }
+
 .filter-form hr {
   margin-top: 5px;
   margin-bottom: 10px;
@@ -118,4 +152,62 @@ a {
   text-align: left;
   margin: auto;
   padding: 5px;
+}
+/*Log In Form*/
+.login-form {
+  border: 1px solid black;
+  margin: 10px auto;
+  padding: 5px;
+  max-width: 225px;
+  align-items: center;
+  background-color: white;
+}
+
+.login-form h4, input, button {
+  margin: 5px;
+}
+
+/*Register Form*/
+.register-form {
+  border: 1px solid black;
+  margin: 10px auto;
+  padding: 5px;
+  max-width: 225px;
+  align-items: center;
+  background-color: white;
+}
+
+.register-form h4, input, button {
+  margin: 5px;
+}
+
+/*About Container*/
+.about-container {
+  border: 1px solid black;
+  margin: 10px auto;
+  padding: 10px;
+  max-width: 600px;
+  align-items: center;
+  background-color: white;
+}
+
+.about-container hr {
+    margin-top: 5px;
+    margin-bottom: 10px;
+    border: 0;
+    border-top: 1px solid black;
+}
+
+/*Misc Styling*/
+#login-warn {
+  color: red;
+  text-align: center;
+}
+
+.box-shadow--2dp {
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px 5px 0 rgba(0, 0, 0, .12)
+}
+
+.box-shadow--4dp {
+    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, .14), 0 1px 10px 0 rgba(0, 0, 0, .12), 0 2px 4px -1px rgba(0, 0, 0, .2)
 }
