--- a/public/templates/workouts.html
+++ b/public/templates/workouts.html
@@ -1,8 +1,6 @@
-
-
   <!-- Angular Filter Forms -->
-    <div class="col-sm-4">
-      <div class="filter-form">
+    <div class="filter-container" id="sticky-anchor">
+      <div class="filter-form box-shadow--4dp" id="sticky">
         <h4>Filter Workouts</h4>
       <p> Select one option from each line to filter your choices </p>
       <hr>
@@ -22,10 +20,11 @@
        </table>
    </div>
     </div>
+
   <!-- Workouts List -->
     <div class="container-fluid">
        <div class="row">
-       <div class="workout-list col-sm-8" ng-repeat="workout in vm.workouts | orderBy: '-fav_counter'| filter:{medium_weights:filter.medium_weights, heavy_weights:filter.heavy_weights, jumprope:filter.jumprope, resistance_bands:filter.resistance_bands, kettle_ball:filter.kettle_ball, slam_ball:filter.slam_ball, ab_mat:filter.ab_mat}">
+       <div class="workout-list box-shadow--4dp animate-repeat" ng-repeat="workout in vm.workouts | orderBy: '-fav_counter'| filter:{medium_weights:filter.medium_weights, heavy_weights:filter.heavy_weights, jumprope:filter.jumprope, resistance_bands:filter.resistance_bands, kettle_ball:filter.kettle_ball, slam_ball:filter.slam_ball, ab_mat:filter.ab_mat}">
          <h4> <a ng-model="workout._id" value="{{workout._id}}">  {{workout.title}} </a> </h4>
          <span ng-click="vm.addFavCount(workout)">
            <i ng-class="{'glyphicon glyphicon-heart': liked, 'glyphicon glyphicon-heart-empty': !liked}" ng-click="liked=!liked"></i>
@@ -49,8 +48,11 @@
                <hr>
                </div>
        </div>
-       <span>
-         <input type="text" ng-model="comment.body" placeholder="Add comment here...">
+       <span ng-hide="vm.isLoggedIn()">
+         <p id="login-warn"> Please <a ui-sref-active="active" ng-hide="vm.isLoggedIn()"ui-sref="login"> log in </a> to comment! </p>
+         </span>
+         <span ng-show="vm.isLoggedIn()">
+         <input class="comment-input" type="text" ng-model="comment.body" placeholder="Add comment here...">
          <button ng-click="vm.addComment(workout, comment)">Post</button>
        </span>
        </div>
