--- a/public/templates/register.html
+++ b/public/templates/register.html
@@ -2,7 +2,7 @@
     <h4>Sign Up</h4>
     <input type="text" placeholder="First Name..." ng-model="vm.userData.name" required />
     <input type="text" placeholder="Email..." ng-model="vm.userData.email" required />
-    <input type="text" placeholder="Password..." ng-model="vm.userData.password" required />
+    <input type="password" placeholder="Password..." ng-model="vm.userData.password" required />
     <br>
     <button ng-click="submit">Submit</button>
   </form>
