--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -1,10 +1,7 @@
 <div class="home-container box-shadow--4dp">
-  <p class="header-font">Welcome to Playtime Picks</p>
+  <p class="header-font">Welcome to Workout of the Day</p>
   <hr>
   <p>
-  Find something fun to do today with your kids!
-  Easily find fun activities for how you're feeling by using our simple filter bar.
-  If you have any great activities to share with others feel free to sign-up and add it to the list, you can also leave comments on other activities on this site.
-  Hopefully you'll be inspired to try something fun and new!
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent posuere leo in facilisis rutrum. Mauris eget turpis sit amet neque congue condimentum eget sed erat. Vestibulum dignissim arcu non erat bibendum, vitae cursus lectus tempor. Vivamus vel congue massa. Maecenas finibus dictum ligula et pellentesque. Curabitur interdum feugiat metus quis pharetra. Fusce non aliquet lacus, et consectetur est. Integer cursus velit eget vestibulum aliquet. Sed ac maximus augue, at facilisis nulla. Pellentesque venenatis libero enim, id porta augue tincidunt sed. Duis sed lectus at felis auctor malesuada eu et neque. Curabitur sagittis et neque non scelerisque. Vestibulum eleifend eu justo non vestibulum. Pellentesque eu tempus augue.
   </p>
   </div>
