changed some icons

--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -2,6 +2,10 @@
   <p class="header-font">Welcome to Workout of the Day</p>
   <hr>
   <p>
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent posuere leo in facilisis rutrum. Mauris eget turpis sit amet neque congue condimentum eget sed erat. Vestibulum dignissim arcu non erat bibendum, vitae cursus lectus tempor. Vivamus vel congue massa. Maecenas finibus dictum ligula et pellentesque. Curabitur interdum feugiat metus quis pharetra. Fusce non aliquet lacus, et consectetur est. Integer cursus velit eget vestibulum aliquet. Sed ac maximus augue, at facilisis nulla. Pellentesque venenatis libero enim, id porta augue tincidunt sed. Duis sed lectus at felis auctor malesuada eu et neque. Curabitur sagittis et neque non scelerisque. Vestibulum eleifend eu justo non vestibulum. Pellentesque eu tempus augue.
+  Workout of the Day is an app for anyone wanting to quickly find a workout to spice up your gym routine.
+  Find fun workouts based on the equipment you want to use by using the filter.
+  If you have any great workouts to share with others feel free to sign-up and add it to the list.
+  You can also leave comments on other workouts on this site.
+  We hope we can help you pick the right workouts to make you break a sweat!
   </p>
   </div>
