--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -1,7 +1,7 @@
 <form class="login-form" ng-submit="vm.loginUser()">
-  <h4>Login:</h4>
-  <input type="text" placeholder="Email..." ng-model="vm.loginData.email" required />
-  <input type="password" placeholder="Password..." ng-model="vm.loginData.password" required />
+  <h4>Login</h4>
+  <input type="text" placeholder="Email" ng-model="vm.loginData.email" required />
+  <input type="password" placeholder="Password" ng-model="vm.loginData.password" required />
   <br>
   <button ng-click="submit">Submit</button>
 </form>
