--- a/public/templates/workouts.html
+++ b/public/templates/workouts.html
@@ -2,7 +2,7 @@
     <div class="filter-container" id="sticky-anchor">
       <div class="filter-form box-shadow--4dp" id="sticky">
         <h4>Filter Workouts</h4>
-      <p> Select one option from each line to filter your choices </p>
+      <p> Select one equipment option from each line below to filter workouts</p>
       <hr>
       <table id="radio-table">
           <tr>
@@ -29,7 +29,7 @@
           <div class="workout-info">
          <h4> <a ng-model="workout._id">  {{workout.title}} </a> </h4>
          <div ng-click="vm.addFavCount(workout)">
-           <i ng-class="{'glyphicon glyphicon-heart': liked, 'glyphicon glyphicon-heart-empty': !liked}" ng-click="liked=!liked"></i>
+           <i ng-class="{'glyphicon glyphicon-star': liked, 'glyphicon glyphicon-star-empty': !liked}" ng-click="liked=!liked"></i>
          <!-- <p> Favorite: {{activity.favorite}} </p> -->
           {{workout.fav_counter}}
          </div>
