--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,6 +1,6 @@
 body {
    padding: 50px;
-   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+   font: 14px "Tahoma", Verdana, Arial, sans-serif;
  }
 
  a {
